# sandbox

./: Dockerfile  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
application/: __init__.py  grpc.py  logger.py  main.py  settings.py  state.py  utils.py
application/account/: app.py
application/auth/: app.py
application/clients/brokers/kafka/: consumer.py  producer.py
application/clients/db/dm/: orm_models.py
application/clients/grpc/account/: account_pb2.py  account_pb2_grpc.py  account_pb2_grpc.pyi
application/clients/grpc/account_proxy/: account_api.py  account_proxy_pb2.py  account_proxy_pb2_grpc.py  account_proxy_pb2_grpc.pyi
application/clients/grpc/kafka/: kafka_api.py  kafka_pb2.py  kafka_pb2.pyi  kafka_pb2_grpc.py  kafka_pb2_grpc.pyi
application/clients/grpc/protos/: account.proto
application/clients/grpc/protos/account/: account.proto
application/clients/grpc/protos/account_proxy/: account_proxy.proto
application/clients/grpc/protos/kafka/: kafka.proto
application/clients/http/: base.py
application/clients/http/dm_api_account/: __init__.py
application/clients/http/dm_api_account/apis/: account_api.py  login_api.py
application/clients/http/dm_api_account/models/: api_models.py
application/clients/http/dm_api_forum/: __init__.py
application/clients/http/dm_api_forum/apis/: comment_api.py  forum_api.py  topic_api.py
application/clients/http/dm_api_forum/models/: api_models.py
application/clients/http/mailhog/apis/: mailhog_api.py
application/clients/http/mailhog/models/: models.py
application/clients/smtp/: client.py
application/data_access/ch/: access.py
application/data_access/pg/: __init__.py  access.py  base_repositoty.py  database.py
application/data_access/redis/: access.py
application/dependency/: dependency.py
application/mail/: app.py
application/register/: app.py
application/services/account/: app.py  exceptions.py  schema.py  service.py
application/services/account/repository/: account_cache.py  account_repository.py  cache_details.py  user_details.py
application/services/admin/: app.py  schema.py  service.py
application/services/admin/repository/: admin_repository.py
application/services/auth/: app.py
application/services/broker/: app.py
application/services/dm_api_account/: app.py
application/services/dm_api_forum/: app.py
application/services/mail/: app.py  exceptions.py
application/services/register/: app.py  exceptions.py  service.py
application/services/register/repository/: register_analytics.py
application/services/users/: app.py  schema.py  service.py
application/services/users/repository/: users_cache.py  users_repository.py
application/users/: app.py
migrations/ch/: 01_create_tables.py
