[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = ""
authors = ["Menshikov Valeriy Sergeevich <vmenshikov@ozon.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.2"
uvicorn = "^0.31.1"
grpcio-tools = "^1.66.2"
httpx = "^0.27.2"
structlog = "^24.4.0"
curlify2 = "^2.0.0"
grpcio-reflection = "^1.66.2"
googleapis-common-protos = "^1.65.0"
grpcio = "^1.66.2"
mypy-protobuf = "^3.6.0"
protobuf = "^5.28.2"
redis = "^5.1.1"

# for nuke lint/format
ruff = ">=0.1.5, <1.0.0"
mypy = "^1.5.0"
types-protobuf = "^4.24.0.20240311"
types-pyyaml = "^6.0.12.12"
types-toml = "^0.10.8.20240310"
types-requests = "^2.0.0"
types-redis = ">=4.6.0, <6.0.0"
black = {extras = ["jupyter"], version = "^24.4.2"}

pydantic-settings = "^2.6.0"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"
aiochclient = "^2.6.0"
orjson = "^3.10.10"

### lint & format config
aiokafka = "^0.12.0"
loguru = "^0.7.3"
[tool.ruff]
line-length = 120
extend-exclude = [
    "stubs",
    "migrations",
    "*pb2*",
    ".git",
    "__pycache__",
    "build",
    "dist",
    "__init__.py",
]

[tool.ruff.lint]
select = ["N", "B", "A", "E", "W", "F", "ASYNC", "S", "D", "I"]
ignore = [
    "PT001",
    "D100",
    "D101",
    "D102",
    "D103",
    "D107",
    "D104",
    "W293",
    "S101",
    "D212",
    "D200",
    "UP007",
    "S105",
    "S311",
    "S106",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id"]

[tool.mypy]
packages = ["application"]
exclude = ["application/clients/grpc"]
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"